--- a/website/package.json
+++ b/website/package.json
@@ -33,6 +33,7 @@
     "react-dom": "16.7.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.8.0",
+    "react-live": "1.12.0",
     "react-router-dom": "4.3.1",
     "react-syntax-highlighter": "10.1.2"
   }
