--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "lodash.sortby": "4.7.0",
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
+    "popper": "^1.0.1",
     "prop-types": "15.6.2",
+    "react-popper": "^1.3.3",
     "react-required-if": "1.0.3",
     "react-select": "2.3.0",
     "react-textarea-autosize": "7.1.0",
