--- a/materials/internals/definition.yaml
+++ b/materials/internals/definition.yaml
@@ -403,7 +403,7 @@ plainTokens:
   shadow-15-second: '0 1px 4.75px rgba(0, 0, 0, 0.12)'
   font-family-default: "'Open Sans', sans-serif"
   font-size-default: 1rem
-  font-size-small: 12px
+  font-size-small: 0.9231rem
   shadow-box-tag-hover: '0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)'
   size-height-tag: 26px
   standard-input-height: 32px
