--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
+    "test:visual": "jest --config jest.visual.config.js",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "percy": "percy exec -- jest --config jest.visual.config.js --runInBand",
     "visual-testing-app:build": "NODE_ENV=production webpack --config visual-testing-app/webpack.config.js",
@@ -89,8 +90,8 @@
     "@babel/plugin-proposal-class-properties": "7.3.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.1",
-    "@babel/plugin-transform-destructuring": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
+    "@babel/plugin-transform-destructuring": "7.3.2",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
     "@babel/preset-env": "7.3.1",
@@ -100,7 +101,7 @@
     "@commitlint/cli": "7.5.0",
     "@commitlint/config-conventional": "7.5.0",
     "@emotion/babel-preset-css-prop": "10.0.7",
-    "@percy/puppeteer": "1.0.1",
+    "@percy/puppeteer": "1.0.3",
     "@storybook/addon-actions": "4.1.11",
     "@storybook/addon-info": "4.1.11",
     "@storybook/addon-knobs": "4.1.11",
@@ -110,16 +111,14 @@
     "@storybook/react": "4.1.11",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.1.0",
     "babel-loader": "8.0.5",
     "babel-plugin-emotion": "10.0.7",
     "babel-plugin-module-rewrite": "0.2.0",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "babel-preset-jest": "23.2.0",
     "browserslist": "4.4.1",
     "clean-webpack-plugin": "1.0.1",
     "colors": "1.3.3",
@@ -127,7 +126,7 @@
     "conventional-changelog-cli": "2.0.11",
     "cross-env": "5.2.0",
     "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.8.0",
+    "enzyme-adapter-react-16": "1.9.1",
     "enzyme-to-json": "3.3.5",
     "eslint": "5.13.0",
     "eslint-config-airbnb-base": "13.1.0",
@@ -146,7 +145,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
+    "jest": "24.1.0",
     "jest-dom": "3.0.1",
     "jest-enzyme": "7.0.1",
     "jest-localstorage-mock": "2.4.0",
@@ -154,7 +153,7 @@
     "jest-puppeteer": "3.9.0",
     "jest-runner-eslint": "0.7.3",
     "jest-silent-reporter": "0.1.1",
-    "jest-validate": "23.6.0",
+    "jest-validate": "24.0.0",
     "jest-watch-master": "1.0.0",
     "json-loader": "0.5.7",
     "lint-staged": "8.1.3",
@@ -168,10 +167,10 @@
     "omit-empty": "1.0.0",
     "pptr-testing-library": "0.3.1",
     "prettier": "1.16.4",
-    "puppeteer": "1.12.1",
+    "puppeteer": "1.12.2",
     "rcfile": "1.0.3",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-intl": "2.8.0",
     "react-router-dom": "4.3.1",
     "react-testing-library": "5.4.4",
@@ -187,8 +186,7 @@
     "serve": "10.1.1",
     "shelljs": "0.8.3",
     "storybook-readme": "4.0.5",
-    "webpack": "4.29.0",
-    "webpack-cli": "3.2.1",
+    "webpack": "4.29.1",
     "webpack-dev-server": "3.1.14",
     "yaml": "1.3.1",
     "yaml-loader": "0.5.0"
