--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "dom-helpers": "3.4.0",
     "downshift": "3.2.2",
     "lodash.flatmap": "4.5.0",
+    "lodash.flowright": "3.5.0",
     "lodash.has": "4.5.2",
     "lodash.isnil": "4.0.0",
     "lodash.mapvalues": "4.6.0",
     "lodash.omit": "4.5.0",
-    "lodash.flowright": "3.5.0",
     "lodash.sortby": "4.7.0",
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
@@ -186,6 +186,7 @@
     "shelljs": "0.8.3",
     "storybook-readme": "4.0.5",
     "webpack": "4.29.1",
+    "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.1.14",
     "yaml": "1.3.1",
     "yaml-loader": "0.5.0"
