--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-preset-jest": "24.1.0",
     "browserslist": "4.4.1",
     "clean-webpack-plugin": "1.0.1",
     "colors": "1.3.3",
