--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
+    "react-is": "16.8.1",
     "react-popper": "1.3.3",
     "react-required-if": "1.0.3",
     "react-select": "2.3.0",
