--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.0.0",
     "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-size-snapshot": "0.9.0",
     "serve": "11.0.0",
     "shelljs": "0.8.3",
     "storybook-readme": "5.0.3",
