--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-resolve": "4.0.1",
     "rollup-plugin-replace": "2.1.0",
+    "rollup-plugin-size-snapshot": "0.8.0",
     "serve": "10.1.2",
     "shelljs": "0.8.3",
     "storybook-readme": "4.0.5",
