--- a/package.json
+++ b/package.json
@@ -67,12 +67,8 @@
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
     "downshift": "3.2.4",
-    "lodash.flatmap": "4.5.0",
-    "lodash.flowright": "3.5.0",
-    "lodash.has": "4.5.2",
-    "lodash.isnil": "4.0.0",
-    "lodash.sortby": "4.7.0",
-    "lodash.uniq": "4.5.0",
+    "lodash": "4.17.11",
+    "lodash-es": "4.17.11",
     "prop-types": "15.7.2",
     "react-is": "16.8.3",
     "react-popper": "1.3.3",
@@ -116,6 +112,7 @@
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-plugin-transform-rename-import": "2.3.0",
     "babel-preset-jest": "24.1.0",
     "browserslist": "4.4.2",
     "clean-webpack-plugin": "1.0.1",
@@ -155,8 +152,6 @@
     "jest-watch-master": "1.0.0",
     "json-loader": "0.5.7",
     "lint-staged": "8.1.4",
-    "lodash.camelcase": "4.3.0",
-    "lodash.upperfirst": "4.3.1",
     "markdown-loader": "5.0.0",
     "moment": "2.24.0",
     "moment-locales-webpack-plugin": "1.0.7",
