--- a/package.json
+++ b/package.json
@@ -96,14 +96,14 @@
     "@commitlint/config-conventional": "7.5.0",
     "@emotion/babel-preset-css-prop": "10.0.7",
     "@percy/puppeteer": "1.0.5",
-    "@storybook/addon-actions": "5.1.0-alpha.8",
-    "@storybook/addon-info": "5.1.0-alpha.8",
-    "@storybook/addon-knobs": "5.1.0-alpha.8",
-    "@storybook/addon-links": "5.1.0-alpha.8",
-    "@storybook/addon-options": "5.1.0-alpha.8",
-    "@storybook/addon-storysource": "5.1.0-alpha.8",
-    "@storybook/react": "5.1.0-alpha.8",
-    "@storybook/theming": "5.1.0-alpha.8",
+    "@storybook/addon-actions": "5.0.3",
+    "@storybook/addon-info": "5.0.3",
+    "@storybook/addon-knobs": "5.0.3",
+    "@storybook/addon-links": "5.0.3",
+    "@storybook/addon-options": "5.0.3",
+    "@storybook/addon-storysource": "5.0.3",
+    "@storybook/react": "5.0.3",
+    "@storybook/theming": "5.0.3",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
     "babel-eslint": "10.0.1",
