--- a/package.json
+++ b/package.json
@@ -96,13 +96,14 @@
     "@commitlint/config-conventional": "7.5.0",
     "@emotion/babel-preset-css-prop": "10.0.7",
     "@percy/puppeteer": "1.0.5",
-    "@storybook/addon-actions": "4.1.13",
-    "@storybook/addon-info": "4.1.13",
-    "@storybook/addon-knobs": "4.1.13",
-    "@storybook/addon-links": "4.1.13",
-    "@storybook/addon-options": "4.1.13",
-    "@storybook/addon-storysource": "4.1.13",
-    "@storybook/react": "4.1.13",
+    "@storybook/addon-actions": "5.0.3",
+    "@storybook/addon-info": "5.0.3",
+    "@storybook/addon-knobs": "5.0.3",
+    "@storybook/addon-links": "5.0.3",
+    "@storybook/addon-options": "5.0.3",
+    "@storybook/addon-storysource": "5.0.3",
+    "@storybook/react": "5.0.3",
+    "@storybook/theming": "5.0.3",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
     "babel-eslint": "10.0.1",
@@ -178,7 +179,7 @@
     "rollup-plugin-replace": "2.1.0",
     "serve": "10.1.2",
     "shelljs": "0.8.3",
-    "storybook-readme": "4.0.5",
+    "storybook-readme": "5.0.0",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.1",
