--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ cache:
   directories:
     - node_modules
 
+before_install:
+  # Install yarn
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
+  - export PATH=$HOME/.yarn/bin:$PATH
+
 script:
   # fail fast - in case there is an error building, quit immediately.
   # instruct bash to quit if there is a non zero response code (error)
