--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.12",
+    "core-js": "2.6.5",
     "cross-env": "5.2.0",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.11.2",
