--- a/package.json
+++ b/package.json
@@ -80,15 +80,15 @@
     "warning": "4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "7.3.4",
-    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/core": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
-    "@babel/plugin-transform-destructuring": "7.3.2",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
+    "@babel/plugin-transform-destructuring": "7.4.0",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.3.4",
-    "@babel/preset-env": "7.3.4",
+    "@babel/plugin-transform-runtime": "7.4.0",
+    "@babel/preset-env": "7.4.2",
     "@babel/preset-react": "7.0.0",
     "@commercetools/enzyme-extensions": "4.0.0",
     "@commercetools/jest-enzyme-matchers": "1.1.2",
@@ -115,11 +115,12 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-plugin-transform-rename-import": "2.3.0",
     "babel-preset-jest": "24.1.0",
-    "browserslist": "4.5.1",
+    "browserslist": "4.5.2",
     "clean-webpack-plugin": "1.0.1",
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.12",
+    "core-js": "2.6.5",
     "cross-env": "5.2.0",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.11.2",
@@ -167,19 +168,19 @@
     "react-dom": "16.8.3",
     "react-intl": "2.8.0",
     "react-router-dom": "4.3.1",
-    "react-testing-library": "6.0.0",
+    "react-testing-library": "6.0.2",
     "react-value": "0.2.0",
     "rimraf": "2.6.3",
-    "rollup": "1.6.0",
+    "rollup": "1.7.3",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-cleanup": "3.1.1",
     "rollup-plugin-commonjs": "9.2.1",
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-resolve": "4.0.1",
-    "rollup-plugin-replace": "2.1.0",
+    "rollup-plugin-replace": "2.1.1",
     "serve": "10.1.2",
     "shelljs": "0.8.3",
-    "storybook-readme": "5.0.0",
+    "storybook-readme": "5.0.1",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.1",
