--- a/package.json
+++ b/package.json
@@ -61,22 +61,22 @@
     "visual-testing-app:serve": "serve visual-testing-app/dist --no-clipboard --single --listen 3001"
   },
   "dependencies": {
-    "@emotion/core": "10.0.7",
-    "@emotion/styled": "10.0.7",
+    "@emotion/core": "10.0.10",
+    "@emotion/styled": "10.0.10",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
-    "downshift": "3.2.4",
+    "downshift": "3.2.7",
     "lodash": "4.17.11",
     "lodash-es": "4.17.11",
     "prop-types": "15.7.2",
-    "react-is": "16.8.3",
+    "react-is": "16.8.6",
     "react-popper": "1.3.3",
     "react-required-if": "1.0.3",
-    "react-select": "2.4.1",
+    "react-select": "2.4.2",
     "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.0",
-    "tiny-invariant": "1.0.3",
+    "tiny-invariant": "1.0.4",
     "warning": "4.0.3"
   },
   "devDependencies": {
@@ -94,39 +94,39 @@
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
-    "@emotion/babel-preset-css-prop": "10.0.7",
+    "@emotion/babel-preset-css-prop": "10.0.9",
     "@percy/puppeteer": "1.0.5",
-    "@storybook/addon-actions": "5.0.3",
-    "@storybook/addon-info": "5.0.3",
-    "@storybook/addon-knobs": "5.0.3",
-    "@storybook/addon-links": "5.0.3",
-    "@storybook/addon-options": "5.0.3",
-    "@storybook/addon-storysource": "5.0.3",
-    "@storybook/react": "5.0.3",
-    "@storybook/theming": "5.0.3",
+    "@storybook/addon-actions": "5.0.5",
+    "@storybook/addon-info": "5.0.5",
+    "@storybook/addon-knobs": "5.0.5",
+    "@storybook/addon-links": "5.0.5",
+    "@storybook/addon-options": "5.0.5",
+    "@storybook/addon-storysource": "5.0.5",
+    "@storybook/react": "5.0.5",
+    "@storybook/theming": "5.0.5",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "24.1.0",
+    "babel-jest": "24.5.0",
     "babel-loader": "8.0.5",
     "babel-plugin-module-rewrite": "0.2.0",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-plugin-transform-rename-import": "2.3.0",
-    "babel-preset-jest": "24.1.0",
+    "babel-preset-jest": "24.3.0",
     "browserslist": "4.5.2",
-    "clean-webpack-plugin": "1.0.1",
+    "clean-webpack-plugin": "2.0.1",
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.12",
-    "core-js": "2.6.5",
+    "core-js": "3.0.0",
     "cross-env": "5.2.0",
     "emotion-theming": "10.0.10",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.11.2",
     "enzyme-to-json": "3.3.5",
-    "eslint": "5.15.2",
+    "eslint": "5.15.3",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-formatter-pretty": "2.1.1",
@@ -143,7 +143,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "24.1.0",
+    "jest": "24.5.0",
     "jest-dom": "3.1.3",
     "jest-enzyme": "7.0.2",
     "jest-localstorage-mock": "2.4.0",
@@ -151,7 +151,7 @@
     "jest-puppeteer": "4.1.0",
     "jest-runner-eslint": "0.7.3",
     "jest-silent-reporter": "0.1.2",
-    "jest-validate": "24.0.0",
+    "jest-validate": "24.5.0",
     "jest-watch-master": "1.0.0",
     "json-loader": "0.5.7",
     "lint-staged": "8.1.5",
@@ -165,27 +165,27 @@
     "prettier": "1.16.4",
     "puppeteer": "1.13.0",
     "rcfile": "1.0.3",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-intl": "2.8.0",
-    "react-router-dom": "4.3.1",
-    "react-testing-library": "6.0.2",
+    "react-router-dom": "5.0.0",
+    "react-testing-library": "6.0.3",
     "react-value": "0.2.0",
     "rimraf": "2.6.3",
-    "rollup": "1.7.3",
+    "rollup": "1.7.4",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-cleanup": "3.1.1",
-    "rollup-plugin-commonjs": "9.2.1",
-    "rollup-plugin-json": "3.1.0",
+    "rollup-plugin-commonjs": "9.2.2",
+    "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "4.0.1",
     "rollup-plugin-replace": "2.1.1",
     "serve": "10.1.2",
     "shelljs": "0.8.3",
     "storybook-readme": "5.0.1",
     "webpack": "4.29.6",
-    "webpack-cli": "3.2.3",
+    "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
-    "yaml": "1.3.2",
+    "yaml": "1.4.0",
     "yaml-loader": "0.5.0"
   },
   "peerDependencies": {
@@ -194,7 +194,7 @@
     "react": "16.x",
     "react-dom": "16.x",
     "react-intl": "2.x",
-    "react-router-dom": "4.x"
+    "react-router-dom": "4.x || 5.x"
   },
   "husky": {
     "hooks": {
