chore: update visual routes, add missing dep

--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "conventional-changelog-cli": "2.0.12",
     "core-js": "2.6.5",
     "cross-env": "5.2.0",
+    "emotion-theming": "10.0.10",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.11.2",
     "enzyme-to-json": "3.3.5",
