fix(circleci): releasing to next

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,5 +147,4 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              only:
-                - master
+              ignore: /.*/
