--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,3 +148,5 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
+              only:
+                - master
