fix(circleci): releasing to next (#619)
* fix(circleci): releasing to next

* fix(ci): add only master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,5 +147,6 @@ workflows:
             tags:
               only: /^v.*/
             branches:
+              ignore: /.*/
               only:
                 - master
