--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
     "docs:publish": "node scripts/publish-docs.js",
-    "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
+    "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n/data 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
     "format:js": "prettier --write '**/*.js'",
