--- a/package.json
+++ b/package.json
@@ -97,14 +97,14 @@
     "@commitlint/config-conventional": "7.5.0",
     "@emotion/babel-preset-css-prop": "10.0.9",
     "@percy/puppeteer": "1.0.7",
-    "@storybook/addon-actions": "5.0.6",
-    "@storybook/addon-info": "5.0.6",
-    "@storybook/addon-knobs": "5.0.6",
-    "@storybook/addon-links": "5.0.6",
-    "@storybook/addon-options": "5.0.6",
-    "@storybook/addon-storysource": "5.0.6",
-    "@storybook/react": "5.0.6",
-    "@storybook/theming": "5.0.6",
+    "@storybook/addon-actions": "v5.1.0-alpha.24",
+    "@storybook/addon-info": "v5.1.0-alpha.24",
+    "@storybook/addon-knobs": "v5.1.0-alpha.24",
+    "@storybook/addon-links": "v5.1.0-alpha.24",
+    "@storybook/addon-options": "v5.1.0-alpha.24",
+    "@storybook/addon-storysource": "v5.1.0-alpha.24",
+    "@storybook/react": "v5.1.0-alpha.24",
+    "@storybook/theming": "v5.1.0-alpha.24",
     "@svgr/rollup": "4.1.0",
     "@svgr/webpack": "4.1.0",
     "babel-eslint": "10.0.1",
