chore(circleci): use manual env variable checks for releae

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,20 +81,40 @@ commands:
       - run: ./scripts/run-percy.sh
   publish_to_next:
     parameters:
+      git_branch:
+        type: env_var_name
+        default: CIRCLE_BRANCH
+      git_tag:
+        type: env_var_name
+        default: CIRCLE_TAG
       working_directory:
         type: string
         default: *working_directory
     steps:
-      - checkout
-      - restore_cache: *restore_yarn_cache
-      - install_dependencies
-      - build_artifacts
-      - run:
-          name: Authenticating with npm registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > << parameters.working_directory >>/.npmrc
-      - run:
-          name: Publishing to next dist-tag
-          command: yarn release:next
+      - when:
+          condition: << parameters.git_tag >>
+          steps:
+            - run:
+                name: Checking if on master branch
+                command: |
+                  if [ "<< parameters.git_branch >>" != "master" ]; then
+                    echo "Git branch is << parameters.git_branch >>, not publishing."
+                    exit 0
+                  fi
+            - checkout
+            - restore_cache: *restore_yarn_cache
+            - install_dependencies
+            - build_artifacts
+            - run:
+                name: Authenticating with npm registry
+                command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > << parameters.working_directory >>/.npmrc
+            - run:
+                name: Publishing << parameters.git_tag >> from << parameters.git_branch >> to next dist-tag
+                command: yarn release:next
+      - unless:
+          condition: << parameters.git_tag >>
+          steps:
+            - run: echo "No git tag, not publishing."
 
 jobs:
   lint_and_test:
@@ -143,6 +163,3 @@ workflows:
       - publish:
           requires:
             - bundle_test
-          filters:
-            tags:
-              only: /^v.*/
