chore(circleci): to use env variable correctly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,30 +91,27 @@ commands:
         type: string
         default: *working_directory
     steps:
-      - when:
-          condition: << parameters.git_tag >>
-          steps:
-            - run:
-                name: Checking if on master branch
-                command: |
-                  if [ "<< parameters.git_branch >>" != "master" ]; then
-                    echo "Git branch is << parameters.git_branch >>, not publishing."
-                    exit 0
-                  fi
-            - checkout
-            - restore_cache: *restore_yarn_cache
-            - install_dependencies
-            - build_artifacts
-            - run:
-                name: Authenticating with npm registry
-                command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > << parameters.working_directory >>/.npmrc
-            - run:
-                name: Publishing << parameters.git_tag >> from << parameters.git_branch >> to next dist-tag
-                command: yarn release:next
-      - unless:
-          condition: << parameters.git_tag >>
-          steps:
-            - run: echo "No git tag, not publishing."
+      - run:
+          name: Checking if on master branch
+          command: |
+            if [ ${<< parameters.git_branch >>} != "master" ]; then
+              echo "Git branch is ${<< parameters.git_branch >>}, not publishing."
+              exit 0
+            fi
+            if [ -z ${<< parameters.git_tag >>}]; then
+              echo "Git tag is not set, not publishing."
+              exit 0
+            fi
+      - checkout
+      - restore_cache: *restore_yarn_cache
+      - install_dependencies
+      - build_artifacts
+      - run:
+          name: Authenticating with npm registry
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > << parameters.working_directory >>/.npmrc
+      - run:
+          name: Publishing ${<< parameters.git_tag >>} from ${<< parameters.git_branch >>} to next dist-tag
+          command: yarn release:next
 
 jobs:
   lint_and_test:
