--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,9 +98,12 @@ commands:
               echo "Git branch is ${<< parameters.git_branch >>}, not publishing."
               exit 0
             fi
-            if [ -z ${<< parameters.git_tag >>}]; then
+            else if [ -z ${<< parameters.git_tag >>}]; then
               echo "Git tag is not set, not publishing."
               exit 0
+            fi
+            else
+              echo "Git branch is ${<< parameters.git_branch >>} and tag is ${<< parameters.git_tag >>}, publishing."
             fi
       - checkout
       - restore_cache: *restore_yarn_cache
