fix: bash voodoo :face_palm:

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,14 +94,14 @@ commands:
       - run:
           name: Checking if on master branch
           command: |
-            if [ ${<< parameters.git_branch >>} != "master" ]; then
+            if [ ${<< parameters.git_branch >>} != "master" ]
+            then
               echo "Git branch is ${<< parameters.git_branch >>}, not publishing."
               circleci-agent step halt
-            fi
-            else if [ -z ${<< parameters.git_tag >>}]; then
+            elif [ -z ${<< parameters.git_tag >>}]
+            then
               echo "Git tag is not set, not publishing."
               circleci-agent step halt
-            fi
             else
               echo "Git branch is ${<< parameters.git_branch >>} and tag is ${<< parameters.git_tag >>}, publishing."
             fi
