--- a/package.json
+++ b/package.json
@@ -148,12 +148,12 @@
     "jest-dom": "3.1.3",
     "jest-enzyme": "7.0.2",
     "jest-localstorage-mock": "2.4.0",
-    "jest-plugin-filename": "0.0.1",
     "jest-puppeteer": "4.1.1",
     "jest-runner-eslint": "0.7.3",
     "jest-silent-reporter": "0.1.2",
     "jest-validate": "24.7.0",
     "jest-watch-master": "1.0.0",
+    "jest-watch-typeahead": "0.3.0",
     "json-loader": "0.5.7",
     "lint-staged": "8.1.5",
     "markdown-loader": "5.0.0",
