chore: re-add tag filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,5 +161,8 @@ workflows:
           requires:
             - build
       - publish:
+          filters:
+            tags:
+              only: /^v.*/
           requires:
             - bundle_test
