--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,17 +146,28 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - lint_and_test
+      - lint_and_test:
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
       - build:
           requires:
             - lint_and_test
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
       - bundle_test:
           requires:
             - build
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
       - vrt_test:
           requires:
             - build
       - publish:
+          requires:
+            - bundle_test
           filters:
             tags:
               only: /v[\.0-9]+.*/
@@ -164,5 +175,3 @@ workflows:
               only:
                 - master
                 - /release\/.*/
-          requires:
-            - bundle_test
