--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,11 +94,7 @@ commands:
       - run:
           name: Checking if on master branch
           command: |
-            if [ ${<< parameters.git_branch >>} != "master" ]
-            then
-              echo "Git branch is ${<< parameters.git_branch >>}, not publishing."
-              circleci-agent step halt
-            elif [ -z ${<< parameters.git_tag >>}]
+            if [ -z ${<< parameters.git_tag >>}]
             then
               echo "Git tag is not set, not publishing."
               circleci-agent step halt
@@ -150,19 +146,32 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - lint_and_test
+      - lint_and_test:
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
       - build:
           requires:
             - lint_and_test
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
       - bundle_test:
           requires:
             - build
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
       - vrt_test:
           requires:
             - build
       - publish:
-          filters:
-            tags:
-              only: /^v.*/
           requires:
             - bundle_test
+          filters:
+            tags:
+              only: /v[\.0-9]+.*/
+            branches:
+              only:
+                - master
+                - /release\/.*/
