--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "emotion-theming": "10.0.10",
     "lodash": "4.17.11",
     "lodash-es": "4.17.11",
+    "lodash.omit": "4.5.0",
     "prop-types": "15.7.2",
     "react-is": "16.8.6",
     "react-popper": "1.3.3",
