--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n/data 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
+    "lint:css": "jest --config jest.stylelint.config.js",
     "format:js": "prettier --write '**/*.js'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
     "format:yaml": "prettier --write --parser yaml '**/*.yaml'",
@@ -149,6 +150,7 @@
     "jest-localstorage-mock": "2.4.0",
     "jest-puppeteer": "4.1.1",
     "jest-runner-eslint": "0.7.3",
+    "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.2",
     "jest-validate": "24.8.0",
     "jest-watch-master": "1.0.0",
@@ -183,6 +185,10 @@
     "serve": "11.0.0",
     "shelljs": "0.8.3",
     "storybook-readme": "5.0.3",
+    "stylelint": "stylelint/stylelint",
+    "stylelint-config-standard": "18.3.0",
+    "stylelint-order": "3.0.0",
+    "stylelint-processor-styled-components": "1.7.0",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
     "yaml": "1.6.0",
