--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.21",
+    "create-jest-runner": "^0.5.0",
     "cross-env": "5.2.0",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.2",
@@ -185,10 +186,9 @@
     "serve": "11.0.0",
     "shelljs": "0.8.3",
     "storybook-readme": "5.0.3",
-    "stylelint": "stylelint/stylelint",
+    "stylelint": "10.0.1",
     "stylelint-config-standard": "18.3.0",
     "stylelint-order": "3.0.0",
-    "stylelint-processor-styled-components": "1.7.0",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
     "yaml": "1.6.0",
