chore: rebuild yarn lock, add stylelink prettier

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "stylelint-config-standard"
+    "stylelint-config-standard",
+    "stylelint-config-prettier"
   ],
   "plugins": [
     "stylelint-order"
