--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.21",
-    "create-jest-runner": "^0.5.0",
+    "create-jest-runner": "0.5.0",
     "cross-env": "5.2.0",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.2",
@@ -187,6 +187,7 @@
     "shelljs": "0.8.3",
     "storybook-readme": "5.0.3",
     "stylelint": "10.0.1",
+    "stylelint-config-prettier": "5.2.0",
     "stylelint-config-standard": "18.3.0",
     "stylelint-order": "3.0.0",
     "webpack": "4.32.2",
