chore: adjust stylelint rc

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -37,5 +37,6 @@
     "no-empty-source": null,
     "declaration-empty-line-before": null,
     "no-missing-end-of-source-newline": null,
+    "function-name-case": null,
   }
 }
