--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "jest-localstorage-mock": "2.4.0",
     "jest-puppeteer": "4.1.1",
     "jest-runner-eslint": "0.7.3",
-    "jest-runner-stylelint": "1.0.0",
+    "jest-runner-stylelint": "^1.0.0",
     "jest-silent-reporter": "0.1.2",
     "jest-validate": "24.8.0",
     "jest-watch-master": "1.0.0",
@@ -202,6 +202,9 @@
     "react-dom": "16.x",
     "react-intl": "2.x",
     "react-router-dom": "5.x"
+  },
+  "resolutions": {
+    "jest-runner-stylelint/stylelint": "10.0.1"
   },
   "husky": {
     "hooks": {
