--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "colors": "1.3.3",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.21",
-    "create-jest-runner": "0.5.0",
     "cross-env": "5.2.0",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.2",
@@ -151,7 +150,7 @@
     "jest-localstorage-mock": "2.4.0",
     "jest-puppeteer": "4.1.1",
     "jest-runner-eslint": "0.7.3",
-    "jest-runner-stylelint": "^1.0.0",
+    "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.2",
     "jest-validate": "24.8.0",
     "jest-watch-master": "1.0.0",
