chore: change circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,10 +44,14 @@ commands:
     steps:
       - attach_workspace:
           at: *working_directory
-  lint:
-    description: 'Running linters'
+  lint_js:
+    description: 'Running JavaScript linters'
     steps:
       - run: yarn run jest --projects jest.eslint.config.js --maxWorkers=3 --reporters jest-silent-reporter
+  lint_css:
+    description: 'Running CSS linters'
+    steps:
+      - run: yarn run jest --projects jest.stylelint.config.js --maxWorkers=3 --reporters jest-silent-reporter
   unit_test:
     description: 'Running unit tests'
     steps:
@@ -117,7 +121,8 @@ jobs:
     executor: node_10
     steps:
       - install_dependencies
-      - lint
+      - lint_js
+      - lint_css
       - unit_test
   build:
     executor: node_10
