chore: fix lint errors, add linting to ci (#816)
* chore: fix css lint errors

* chore: change circle config

* chore: update lint staged

* chore: fix css mistake

* chore: adjust pr as to comments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ commands:
   lint:
     description: 'Running linters'
     steps:
-      - run: yarn run jest --projects jest.eslint.config.js --maxWorkers=3 --reporters jest-silent-reporter
+      - run: yarn run jest --projects jest.eslint.config.js jest.stylelint.config.js --maxWorkers=3 --reporters jest-silent-reporter
   unit_test:
     description: 'Running unit tests'
     steps:
