--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@storybook/theming": "5.0.11",
     "@svgr/rollup": "4.2.0",
     "@svgr/webpack": "4.2.0",
+    "@testing-library/react": "8.0.1",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
@@ -171,7 +172,6 @@
     "react-dom": "16.8.6",
     "react-intl": "2.9.0",
     "react-router-dom": "5.0.0",
-    "react-testing-library": "7.0.1",
     "react-value": "0.2.0",
     "rimraf": "2.6.3",
     "rollup": "1.12.4",
