--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@emotion/babel-preset-css-prop": "10.0.9",
     "@percy/puppeteer": "1.0.8",
     "@storybook/addon-actions": "5.1.1",
+    "@storybook/addon-contexts": "5.1.1",
     "@storybook/addon-info": "5.1.1",
     "@storybook/addon-knobs": "5.1.1",
     "@storybook/addon-links": "5.1.1",
@@ -110,8 +111,6 @@
     "@svgr/rollup": "4.3.0",
     "@svgr/webpack": "4.3.0",
     "@testing-library/react": "8.0.1",
-    "@svgr/rollup": "4.3.0",
-    "@svgr/webpack": "4.3.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
