--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@commitlint/config-conventional": "8.0.0",
     "@emotion/babel-preset-css-prop": "10.0.9",
     "@percy/puppeteer": "1.0.8",
+    "@storybook/addon-a11y": "5.1.3",
     "@storybook/addon-actions": "5.1.3",
     "@storybook/addon-contexts": "5.1.3",
     "@storybook/addon-info": "5.1.3",
