--- a/package.json
+++ b/package.json
@@ -112,11 +112,11 @@
     "@svgr/rollup": "4.3.0",
     "@svgr/webpack": "4.3.0",
     "@testing-library/react": "8.0.1",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-module-rewrite": "0.2.0",
-    "babel-plugin-react-intl": "3.2.1",
+    "babel-plugin-react-intl": "3.3.2",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-plugin-transform-rename-import": "2.3.0",
@@ -142,6 +142,7 @@
     "eslint-plugin-react": "7.13.0",
     "formik": "1.5.7",
     "glob": "7.1.4",
+    "global": "4.4.0",
     "history": "4.9.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -169,6 +170,7 @@
     "pptr-testing-library": "0.4.0",
     "prettier": "1.18.2",
     "puppeteer": "1.17.0",
+    "qs": "6.7.0",
     "rcfile": "1.0.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
